--- a/src/components/BoardList.scss
+++ b/src/components/BoardList.scss
@@ -68,4 +68,30 @@
       font-family: "Nanum Gothic", sans-serif;
     }
   }
+
+  .board-list-container {
+    position: relative;
+    padding-bottom: 60px; /* 하단 버튼 공간 확보 */
+  }
+  
+  .write-button {
+    position: fixed;
+    bottom: 10px;
+    right: 70px;
+    background-color: #ccc;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    text-decoration: none;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+  }
+  
+  .write-button:hover {
+    background-color: #0056b3;
+  }
+  
 }
